--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "nava_tech_machine_code",
-    "short_name": "nava_tech_machine_code",
+    "name": "nava_tech",
+    "short_name": "nava_tech",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
